# MLClassMacUpoload

./: .gitignore  README.md  pyproject.toml
images/: README.md
layers/: README.md  __init__.py  activations.py  convolution.py  convolution3d.py  linear.py  losses.py
solutions/: activations.py  convolution.py  linear.py  losses.py
task_descriptions/: Activation.md  Convolution2D.md  LinearLayer.md  Losses.md  README.md
tests/: README.md  test_activation.py  test_convolution.py  test_linear.py  test_losses.py
